Moves first button to z-index 500 to avoid overlap of fox where user cannot click the button

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -313,7 +313,9 @@ nav {
     margin-left: auto;
     margin-right: auto;
     margin-top: 1rem;
+    cursor: pointer;
     // margin-bottom: 1rem;
+    z-index: 500;
   }
 }
 
